--- a/css/find.css
+++ b/css/find.css
@@ -9,6 +9,8 @@ body {
 	margin: 0;
 	padding: 0;
 	height: 1000px;
+	font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Helvetica Neue", sans-serif;
 }
 
 a {
