--- a/css/index.css
+++ b/css/index.css
@@ -127,7 +127,7 @@ a {
 }
 
 .small-friend:nth-child(2) .img {
-	background-image: url('https://en.as.com/en/imagenes/2019/12/11/football/1576102825_947330_noticia_normal.jpg');
+	background-image: url('https://image-cdn.hypb.st/https%3A%2F%2Fkr.hypebeast.com%2Ffiles%2F2019%2F11%2Fson-heungmin-tottenham-hotspur-most-goal-korean-football-player-1.jpg?q=75&w=800&cbr=1&fit=max');
 	background-position: -15px;
 }
 
