--- a/css/chat.css
+++ b/css/chat.css
@@ -189,6 +189,40 @@ a {
 	background-image: linear-gradient(to left, #00c6ff, #0072ff);
 }
 
+.bottom {
+	position: relative;
+}
+
+.bottom input {
+	width: 70%;
+	margin-left: 30px;
+	margin-top: 3px;
+}
+
+.bottom span:nth-child(2) {
+	position: absolute;
+	left: 5px;
+}
+
+.bottom span {
+	margin: 5px;
+}
+
+.bottom input {
+	width: 100%;
+	height: 30px;
+}
+
+.bottom input:focus {
+	outline: none;
+	transform: translateY(-100px);
+	transition: all 1s linear;
+}
+
+.bottom input:focus ~ .icon {
+	opacity: 0;
+}
+
 .normal-friends {
 	padding: 10px 20px;
 }
